feat: add video highlight
