# routes/highlight_routes.go
@@ -1,0 +1,14 @@
+package routes
+
+import (
+	"main/controllers"
+
+	"github.com/gin-gonic/gin"
+)
+
+func Highlight(api *gin.RouterGroup) {
+	Highlight := api.Group("/highlight")
+	{
+		Highlight.POST("/create", controllers.CreateHighlightController)
+	}
+}
